Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64632

MapboxGL plugin not showing up on Windows

XMLWordPrintable

      Apparently, with https://codereview.qt-project.org/#/c/210545/ we forgot to modify QGeoServiceProviderFactoryMapboxGL::createMappingManagerEngine where the condition

      #ifdef Q_OS_WIN
          if (QOpenGLContext::openGLModuleType() != QOpenGLContext::LibGLES) {
              qWarning("The Mapbox GL plugin only supports OpenGL ES on Windows. \
                  Try setting the environment variable QT_OPENGL to 'angle'.");
      
              return 0;
          }
      #endif
      

      should now be changed, or else it won't create a manager

      Note: it might be that this bug will make package testing fail, but if not, feel free to remove the blocker

        For Gerrit Dashboard: QTBUG-64632
        # Subject Branch Project Status CR V

            brunoabinader Bruno de Oliveira Abinader
            paangele Paolo Angelelli
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes