Remove OpenGL ES limitation for Mapbox GL on Windows

Also fixes an issue preventing GL native from working on MinGW.

mapbox-gl-native @ 8757164ac8f2b033b2b12d4baf075ed18cfeb2b4

Task-number: QTBUG-64632
Change-Id: Iab9a560adcd54194cd9829a326b325856f8c8cc2
Reviewed-by: Paolo Angelelli <paolo.angelelli@qt.io>