src/plugins/geoservices/mapboxgl/qgeoserviceproviderpluginmapboxgl.cpp
@@ -65,15 +65,6 @@ QGeoCodingManagerEngine *QGeoServiceProviderFactoryMapboxGL::createGeocodingMana
 QGeoMappingManagerEngine *QGeoServiceProviderFactoryMapboxGL::createMappingManagerEngine(
     const QVariantMap &parameters, QGeoServiceProvider::Error *error, QString *errorString) const
 {
-#ifdef Q_OS_WIN
-    if (QOpenGLContext::openGLModuleType() != QOpenGLContext::LibGLES) {
-        qWarning("The Mapbox GL plugin only supports OpenGL ES on Windows. \
-            Try setting the environment variable QT_OPENGL to 'angle'.");
-
-        return 0;
-    }
-#endif
-
     return new QGeoMappingManagerEngineMapboxGL(parameters, error, errorString);
 }
 
